[tool.poetry]
name = "yummy"
version = "0.1.0"
description = ""
authors = ["Josh Kelley <joshkel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.21"
fabulous = "^0.3.0"
python-dotenv = "^0.10.1"
Pillow = "^6.2"
cffi = "^1.11"

[tool.poetry.dev-dependencies]
ipython = "^7.2"
flake8 = "^3.6"
pep8-naming = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
